# gw_henry_fno

./: .gitignore  README.md  main.py  pyproject.toml  train_fno.py  train_fno_sweep.py
notebooks/:  compare_preds_targets.ipynb  compare_preds_targets.ipynb  plot_scenario_results.ipynb  plot_scenario_results_pre_metric.ipynb  test_foward_pass.ipynb  test_normalization.ipynb
scripts/: run_training.sh  sweep_hidden_dims.pbs  sweep_hidden_dims.sh
src/: config.py
src/data/: henry_scenario_dataset.py  normalizer.py
src/neuralop/: __init__.py  channel_mlp.py  conv.py  embeddings.py  fno.py  losses.py
src/sweep/: __init__.py  artifacts.py  config.py  metrics.py  results.py  trainer.py
