[project]
name = "gw-henry-fno"
version = "0.1.0"
description = "Computational Experiments for Approximation Theory for FNO in Coupled PDE Groundwater setting "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opt-einsum>=3.4.0",
    "packaging>=26.0",
    "tensorly>=0.9.0",
    "tensorly-torch>=0.5.0",
    "torch>=2.11.0",
]
