[project]
name = "gw-henry-fno"
version = "0.1.0"
description = "Computational Experiments for Approximation Theory for FNO in Coupled PDE Groundwater setting "
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "opt-einsum>=3.4.0",
    "packaging>=26.0",
    "pandas>=2.3.3",
    "tensorly>=0.9.0",
    "tensorly-torch>=0.5.0",
    "torch==2.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118", marker = "sys_platform != 'darwin'" }]
